# drawio-digest

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: order-review.drawio
src/drawio_digest/: __init__.py  cli.py  model.py  parser.py  render.py  select.py
tests/: test_parser.py
tests/fixtures/: bigbox.drawio  casepages.drawio  compressed.drawio  dangling.drawio  isolated.drawio  lanes.drawio  multipage.drawio
