[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drawio-digest"
version = "0.1.0"
description = "Extract structure from draw.io diagrams as Markdown, Mermaid or JSON"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["drawio", "mermaid", "diagram", "mxgraph", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/w616054/drawio-digest"
Issues = "https://github.com/w616054/drawio-digest/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
drawio-digest = "drawio_digest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/drawio_digest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
